Thu Nov 28 20:14:54 GMT 2002  Olly Betts <olly@survex.com>

	* docs/index.html: Link to annotated class lists in doxygen generated
	  documentation rather than rather empty index page.

Thu Nov 28 02:23:33 GMT 2002  Olly Betts <olly@survex.com>

	* configure.in,NEWS: Version 0.6.1.

Thu Nov 28 01:38:05 GMT 2002  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated.

Thu Nov 28 01:33:25 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/: Fixed to compile with GCC 3.0.
 
Thu Nov 28 01:32:31 GMT 2002  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated with test results from 0.5.4 release.

Wed Nov 27 22:11:38 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/btree.h: fixed "public:" bodge added during
	  factoring-out of BtreeCheck.

Wed Nov 27 05:01:14 GMT 2002  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.in: Updated for 0.6.0 release.

Wed Nov 27 05:00:39 GMT 2002  Olly Betts <olly@survex.com>

	* AUTHORS,HACKING: Removed or replaced sourceforge.net URLs.

Wed Nov 27 04:58:29 GMT 2002  Olly Betts <olly@survex.com>

	* docs/quartzdesign.html: Reworded "under development" warning;
	  Updated Btree::check(), which is now BtreeCheck::check().

Wed Nov 27 01:36:26 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/btreecheck.cc,backends/quartz/btreecheck.h,
	  backends/quartz/btreetest.cc: Tidied up BtreeCheck - btreetest now
	  sends check output to tout so it's only displayed if the check fails
	  (or btreetest is run with -v).

Tue Nov 26 19:47:24 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/: Split the btree checking code out into a separate
	  file, so it's not linked in when we don't need it.

Tue Nov 26 05:47:32 GMT 2002  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Suppress all output from a successful
	  Btree::Check() is no options are specified, so that btreetest
	  generates clean output when all tests pass.

Tue Nov 19 02:08:30 GMT 2002  Olly Betts <olly@survex.com>

	* NEWS: Updated.
